<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="4"
    android:useDefaultMargins="true"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/gasosa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:padding="12dp"
        android:text="@string/seek_gasosa"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:visibility="visible" />

    <SeekBar
        android:id="@+id/Gasolina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:padding="12dp"
        android:max="300"
        android:progress="5"
        android:visibility="visible" />

    <TextView
        android:id="@+id/etata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:padding="12dp"
        android:text="@string/seek_tata"
        android:textSize="25sp"
        android:visibility="visible" />

    <SeekBar
        android:id="@+id/Etanol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:max="300"
        android:progress="5"
        android:layout_gravity="fill_horizontal"
        android:padding="12dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/e_emelhor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:contentDescription="@string/coloca_melhor"
        android:padding="12dp"
        android:text="@string/emelhor"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="visible" />


    <TextView
        android:id="@+id/emelhor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:padding="12dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:visibility="visible"
        android:contentDescription="@string/coloca_melhor"
        android:text="@string/coloca_melhor"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />

    <ImageView
        android:id="@+id/imaag"

        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_column="1"
        android:layout_gravity="center"
        android:contentDescription="@string/ds_image"
        android:padding="12dp"

        android:visibility="visible"
        app:srcCompat="@drawable/posto" />


</GridLayout>